syntax = "proto3";

package services.identity_service;
import "services/identity_service/messages.proto";

option java_package = "com.hackathonhub.identity_protos.grpc";
option java_multiple_files = true;

service IdentityService {
  rpc ValidateTokens (ValidateTokensRequest) returns (ValidateTokensResponse);
}